--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 }
 
 .images {
- width: 90%;
- display: block;
- margin-left: auto;
- margin-right: auto;
+   width: 90%;
+   display: block;
+   margin-left: auto;
+   margin-right: auto;
 }
 
 /*img:hover {
@@ -134,7 +134,7 @@ function previewImage(event) {
     getLocation(); // get location of where user is uploading photo 
     if (event.target.files.length == 1 && event.target.files[0].type.indexOf("image/") == 0) {
         var blob = event.target.files[0];
-         $("#yourimage").attr("src", URL.createObjectURL(blob)); //makes it able to display blob as an image....
+         // $("#yourimage").attr("src", URL.createObjectURL(blob)); //makes it able to display blob as an image....
      }
  }
  </script>
@@ -148,8 +148,8 @@ function previewImage(event) {
     if (navigator.geolocation) {
         navigator.geolocation.getCurrentPosition(showPosition, showError);
     } else {
-     alert("Geolocation is not supported :(");
- }
+       alert("Geolocation is not supported :(");
+   }
 }
 
 function showPosition(position) {
@@ -204,6 +204,32 @@ $("#form1").validate({
 /* post form info to server */
 $("#sendButton").bind("click", function (event, ui) {
     var file = document.getElementById('file').files[0];
+
+    var img = document.getElementById("yourimage");
+    img.src = window.URL.createObjectURL(file);
+
+    var MAX_WIDTH = 800;
+    var MAX_HEIGHT = 600;
+    var width = img.width;
+    var height = img.height;
+    
+    if (width > height) {
+      if (width > MAX_WIDTH) {
+        height *= MAX_WIDTH / width;
+        width = MAX_WIDTH;
+    }
+} else {
+  if (height > MAX_HEIGHT) {
+    width *= MAX_HEIGHT / height;
+    height = MAX_HEIGHT;
+}
+}
+canvas.width = width;
+canvas.height = height;
+var ctx = canvas.getContext("2d");
+ctx.drawImage(img, 0, 0, width, height);
+
+
     var key = "events/" + (new Date).getTime() + '-' + file.name; //uploads to this folder and name
 
     // getting values of form fields
@@ -216,7 +242,7 @@ $("#sendButton").bind("click", function (event, ui) {
 
 
 // if any fields are empty then cant upload
-if (!id || !title || !desc || !category) {
+if (!id || !title || !category) {
     alert("Some fields are empty and need to be filled out!");
 }
 
