--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
     
     <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.12.0/additional-methods.min.js"></script>
 
+
+
+    <script src="resize/jquery.exif.js"></script>
+    <script src="resize/jquery.canvasResize.js"></script>
+    <script src="resize/canvasResize.js"></script>
+
+
+
     <style>
     #yourimage {
       /*width: 25%;*/
@@ -205,30 +213,18 @@ $("#form1").validate({
 $("#sendButton").bind("click", function (event, ui) {
     var file = document.getElementById('file').files[0];
 
-    var img = document.getElementById("yourimage");
-    img.src = window.URL.createObjectURL(file);
 
-    var MAX_WIDTH = 800;
-    var MAX_HEIGHT = 600;
-    var width = img.width;
-    var height = img.height;
-    
-    if (width > height) {
-      if (width > MAX_WIDTH) {
-        height *= MAX_WIDTH / width;
-        width = MAX_WIDTH;
-    }
-} else {
-  if (height > MAX_HEIGHT) {
-    width *= MAX_HEIGHT / height;
-    height = MAX_HEIGHT;
-}
-}
-canvas.width = width;
-canvas.height = height;
-var ctx = canvas.getContext("2d");
-ctx.drawImage(img, 0, 0, width, height);
-
+    $("input[file=photo]").change(function(e) {
+        $.canvasResize(file, {
+            width: 300,
+            height: 0,
+            crop: false,
+            quality: 80,
+            callboack: function(data, width, height) {
+                $("#yourimage").attr("src", data);
+            }
+        })
+    })
 
     var key = "events/" + (new Date).getTime() + '-' + file.name; //uploads to this folder and name
 
