--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ $("#sendButton").bind("click", function (event, ui) {
 
     $("input[name=file]").change(function(e) {
         var testFile = e.target.files[0];
-        $.canvasResize(testFile, {
+        canvasResize(testFile, {
             width: 300,
             height: 0,
             crop: false,
