--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ $("#form1").validate({
         },
         file: {
             required: true,
-            accept: "image/jpg, image/jpeg, image/png"
+            accept: "image/*"
         },
         submitHandler: function(form) {
             // need something here
