--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@ $("#form1").validate({
         },
         submitHandler: function(form) {
             // need something here
+            return false;
         }
     }
 });
