--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 
     ********************************************** -->
 
+    <!-- Phonegap -->
+    <script type="text/javascript" src="phonegap.js"></script>
+
     <!-- Jquery and Jquery mobile -->
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.css">
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
@@ -63,10 +66,13 @@
     <link type ="text/css" href="css/main.css" rel="stylesheet">
     <link type ="text/css" href="css/login.css" rel="stylesheet">
 
+    <!--  Gmap 3 Dynamical DB Javascript -->    
+    <script type = "text/javascript" src="js/server.js"></script>
+
     <!--  Weather CSS     -->
     <link type ="text/css" href="css/weather/weather.css" rel="stylesheet">
 
-    <!-- Map stuff -->
+    <!-- Filter categories and show on map -->
     <script type = "text/javascript" src="js/maps.js"></script>
 
     <!-- Can delete that new weather css  -->
@@ -75,8 +81,6 @@
     <!-- Notice Collapse CSS -->
     <link type ="text/css" href="css/collapse.css" rel="stylesheet">
 
-    <!--  Gmap 3 Dynamical DB Javascript -->    
-    <script type = "text/javascript" src="js/server.js"></script>
 
   <!-- *****************************************
 
