--- a/index.html
+++ b/index.html
@@ -72,77 +72,72 @@
     <!-- Notice Collapse CSS -->
     <link type ="text/css" href="css/collapse.css" rel="stylesheet">
 
+    <!-- 
+    END of our code -->
 
-  <!-- 
-  END of our code -->
+</head>
 
-  <body>
-     <!--    Jquery Modal Pop Up    -->
-     <div data-role =page id ="login">
-        <div id ='overlay'></div>
-        <div id='modal'>
-            <div id="content"> 
-                <div class="modal-header">
-                    <h3>eXploreTasman</h3>
-                </div>
-                <div class="modal-body">
-                    <div class="ui-content">
-                        <div class="account-wall">
-                            <img class="profile-img" src="image/tasman.png" alt="">
 
-                            <form class="form-signin">
-                                <input type="text" class="form-control" placeholder="Email" required autofocus>
-                                <input type="password" class="form-control" placeholder="Password" required>
-                                <a href = "#home"><button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button></a>
-                            </form>
-                        </div>
+<body>
+   <!--    Jquery Modal Pop Up    -->
+   <div data-role =page id ="login">
+    <div id ='overlay'></div>
+    <div id='modal'>
+        <div id="content"> 
+            <div class="modal-header">
+                <h3>eXploreTasman</h3>
+            </div>
+            <div class="modal-body">
+                <div class="ui-content">
+                    <div class="account-wall">
+                        <img class="profile-img" src="image/tasman.png" alt="">
+
+                        <form class="form-signin">
+                            <input type="text" class="form-control" placeholder="Email" required autofocus>
+                            <input type="password" class="form-control" placeholder="Password" required>
+                            <a href = "#home"><button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button></a>
+                        </form>
                     </div>
                 </div>
-                <div class="modal-footer">
-                </div>
             </div>
-            <!--                <a href ="#" id='close'>close</a>-->
+            <div class="modal-footer"></div>
         </div>
+        <!--                <a href ="#" id='close'>close</a>-->
+    </div>
+</div> <!-- /login page -->
+
+
+<!-- Home Page -->
+<div data-role="page" id ="home" data-theme="none">
+
+    <!--<div data-role="header" data-theme="b"> 
+    <a href="#" class="ui-btn-left ui-btn ui-btn-inline ui-mini ui-corner-all ui-btn-icon-right ui-icon-gear" Options</a> 
+    <h1></h1>
+    </div>
+-->
+
+<!-- content containing map -->
+<div data-role="main" data-theme="none">
+
+    <!-- The sidebar -->
+    <div id ="nav">
+        <ul>
+            <li><a class="one"   href="#" id="allButton">All</a></li>
+            <li><a class="two"   href="#" id="animalButton">Animals</a></li>
+            <li><a class="three" href="#" id="plantButton">Plants</a></li>
+            <li><a class="four"  href="#" id="otherButton">Other</a></li>
+        </ul>
     </div>
 
-    <div data-role="page" id ="home" data-theme="none">
+    <a href="#nav" id="showMenu">
+        <p>=</p>
+        <p>=</p>
+        <p>=</p>
+    </a>
 
-<!--
-            <div data-role="header" data-theme="b"> 
-                
-                    <a href="#" class="ui-btn-left ui-btn ui-btn-inline
-                                   ui-mini ui-corner-all ui-btn-icon-right 
-                                   ui-icon-gear">Options</a>
-                    <h1></h1>
-            </div>
-        -->
+    <div id = "map"></div>
 
-
-
-        <div data-role="main" data-theme="none">
-
-            <!-- The sidebar -->
-            <div id ="nav">
-                <ul>
-                    <li><a class="one"   href="#" id="allButton">All</a></li>
-                    <li><a class="two"   href="#" id="animalButton">Animals</a></li>
-                    <li><a class="three" href="#" id="plantButton">Plants</a></li>
-                    <li><a class="four"  href="#" id="otherButton">Other</a></li>
-                </ul>
-            </div>
-
-            <a href="#nav" id="showMenu">
-                <p>=</p>
-                <p>=</p>
-                <p>=</p>
-            </a>
-
-            <!-- The google map api version map -->
-            <!--<div id = "map"></div>-->
-
-            <div id = "map"></div>
-
-            <!--New Weather -->            
+    <!--New Weather -->            
 <!--
                 <div class = "stage">
                     <ul class ="boxwrap">
@@ -174,90 +169,81 @@
             -->
 
         </div>
+        <!-- /main page layout -->
 
+
+        <!-- Footer -->
         <div data-role="footer" data-theme="b" data-position="fixed">
             <nav data-role = "navbar">
 
 <!--
-                        <ul>
-                               <li><input type="button" name="Animals" value="Animals" ></li>
-                               <li><input type="button" name="Plants"  value="Plants"  ></li>
-                               <li><input type="button" name="Spots"   value="Spots"   ></li>
-                        </ul>   
-                    -->
-                    <ul>
-                        <li><a href = "#" class= "ui-btn ui-icon-home ui-btn-icon-top">Home</a></li>                            
-                        <!--Keep this line of code until we need the camera stuff -->
-                        <!--
-                        <div class = "fileUpload ui-btn ui-icon-camera ui-btn-icon-top">
-                        <input type = "file" class = "upload" capture = "camera" accept="image/*" id="takePictureField"   data-role="none">
-                        </div>   
-                    -->
+    <ul>
+        <li><input type="button" name="Animals" value="Animals" ></li>
+        <li><input type="button" name="Plants"  value="Plants"  ></li>
+        <li><input type="button" name="Spots"   value="Spots"   ></li>
+    </ul>   -->
 
-                    <li>
-                        <a href = "#camera" class ="ui-btn ui-icon-camera ui-btn-icon-top">
-                            Submit Photo
-                        </a>
-                    </li>
+    <ul>
+        <li><a href = "#" class= "ui-btn ui-icon-home ui-btn-icon-top">Home</a></li>                            
+        <!--Keep this line of code until we need the camera stuff -->
+        <!-- <div class = "fileUpload ui-btn ui-icon-camera ui-btn-icon-top">
+        <input type = "file" class = "upload" capture = "camera" accept="image/*" id="takePictureField"   data-role="none"></div>-->
+        <li><a href = "#camera" class ="ui-btn ui-icon-camera ui-btn-icon-top">Submit Photo</a></li>
+        <li><a href = "#popupmenu" data-rel="popup" data-transition="slideup" class= "ui-btn ui-corner-all  ui-icon-bars ui-btn-icon-top">Options</a>
+            <ul data-role="listview" style="">
+                <li><a href="#weather_info" data-transition="slidedown">Weather</a></li>
+                <li><a href="#slide" data-rel="dialog" data-transition="slidedown">Call</a></li>
+                <li><a href="#news">Notice</a></li>
+                <li><a href="http://encounter.snapithd.com/encounter2/index.php?w=t58f14127cbw40&f=0" height="100%" width="100%">Webcam</a></li>
+            </ul>
+            <!-- </div> -->
+        </li>
+    </ul>
+</nav>
+</div> <!-- /Footer   -->
+</div> <!-- /home page -->
 
-                    <li><a href = "#popupmenu" data-rel="popup" data-transition="slideup" class= "ui-btn ui-corner-all  ui-icon-bars ui-btn-icon-top">Options</a>
-                        <div data-role="popup" id="popupmenu" data-theme="b">
-
-                            <ul data-role="listview" style="">    
-
-                                <li><a href="#weather_info" data-transition="slidedown">Weather</a></li>                 
-                                <li><a href="#slide" data-rel="dialog" data-transition="slidedown">Call</a></li>
-                                <li><a href="#news">Notice</a></li>
-                                <li><a href="http://encounter.snapithd.com/encounter2/index.php?w=t58f14127cbw40&f=0" height="100%" width="100%">Webcam</a></li>
-
-                            </ul>
-                        </div>
-                    </li>
-                </ul>
-            </nav>
-        </div>        
+<!--    Slidedown Page Submit Photo     -->
+<div data-role="page" id="camera" data-theme="a">
+    <div data-role="content">
+        <form id="form1" enctype="multipart/form-data" method="post" class="validate">
+            <fieldset data-role="fieldcontain">
+                <!-- <label for=" IDText" class="ui-hidden-accessible">User ID:</label> -->
+                <input name="IDText" id="IDText" type="text" placeholder="User ID"/>
+            </fieldset>
+            <fieldset data-role="fieldcontain">
+                <!-- <label for=" TitleText">Title:</label> -->
+                <input name="TitleText" id="TitleText" type="text" placeholder="Title" data-clear-btn="true"/>
+            </fieldset>
+            <fieldset data-role="fieldcontain">
+                <!-- <label for=" descText">Description:</label> -->
+                <input name="descText" id="descText" type="text" placeholder="Description" data-clear-btn="true"/>
+            </fieldset>
+            <fieldset data-role="fieldcontain">
+                <select name="category" id="categoryText">
+                    <option selected disabled>Choose category</option>
+                    <option value="Animals">Animals</option>
+                    <option value="Plants">Plants</option>
+                    <option value="Other">Other</option>
+                </select>
+            </fieldset>
+            <fieldset data-role="fieldcontain">
+                <label for="file">Select a File to Upload</label>
+                <input type="file" name="file" id="file" capture="camera" accept="image/*" />
+            </fieldset>
+            <fieldset data-role="fieldcontain" class="ui-screen-hidden">
+                <input name="locationText" id="locationText" type="text"/>
+            </fieldset>
+            <!-- <div data-role="controlgroup"> -->
+            <button type="submit" data-role="button" id="sendButton" data-icon="check" data-iconpos="right">Upload</button>
+            <!-- <button type="reset" data-icon="delete" data-iconpos="right" id="cancelButton">Cancel</button> -->
+            <img id="yourimage"/>
+            <div id="progressNumber"></div>
+        </form>
+        <a href="#home" data-role="button" data-rel="back" data-theme="b">Close</a>
     </div>
+</div> <!-- /Upload form -->
 
-    <!--    Slidedown Page Submit Photo     -->
-    <div data-role="page" id="camera" data-theme="a">
-        <div data-role="content">
-            <form id="form1" enctype="multipart/form-data" method="post" class="validate">
-                <fieldset data-role="fieldcontain">
-                    <!-- <label for=" IDText" class="ui-hidden-accessible">User ID:</label> -->
-                    <input name="IDText" id="IDText" type="text" placeholder="User ID"/>
-                </fieldset>
-                <fieldset data-role="fieldcontain">
-                    <!-- <label for=" TitleText">Title:</label> -->
-                    <input name="TitleText" id="TitleText" type="text" placeholder="Title" data-clear-btn="true"/>
-                </fieldset>
-                <fieldset data-role="fieldcontain">
-                    <!-- <label for=" descText">Description:</label> -->
-                    <input name="descText" id="descText" type="text" placeholder="Description" data-clear-btn="true"/>
-                </fieldset>
-                <fieldset data-role="fieldcontain">
-                    <select name="category" id="categoryText">
-                        <option selected disabled>Choose category</option>
-                        <option value="Animals">Animals</option>
-                        <option value="Plants">Plants</option>
-                        <option value="Other">Other</option>
-                    </select>
-                </fieldset>
-                <fieldset data-role="fieldcontain">
-                    <label for="file">Select a File to Upload</label>
-                    <input type="file" name="file" id="file" capture="camera" accept="image/*" />
-                </fieldset>
-                <fieldset data-role="fieldcontain" class="ui-screen-hidden">
-                    <input name="locationText" id="locationText" type="text"/>
-                </fieldset>
-                <!-- <div data-role="controlgroup"> -->
-                <button type="submit" data-role="button" id="sendButton" data-icon="check" data-iconpos="right">Upload</button>
-                <!-- <button type="reset" data-icon="delete" data-iconpos="right" id="cancelButton">Cancel</button> -->
-                <img id="yourimage"/>
-                <div id="progressNumber"></div>
-            </form>
-            <a href="#home" data-role="button" data-rel="back" data-theme="b">Close</a>
-        </div>
-    </div>
 
 <!--    Slidedown Page Options  Weather     -->
 <div data-role="page" id="weather_info" data-theme="b">
@@ -268,6 +254,7 @@
     </div>
 </div>
 
+
 <!--    Slidedown Page Options  Call Us     -->
 <div data-role="page" id="slide" style="margin:0px">
     <div data-role="content" data-theme="b">
@@ -275,17 +262,17 @@
         <p>Abel Tasman National Park (established in 1942) is renowned for its golden beaches, sculptured granite cliffs, and world-famous Abel Tasman Coast Track. It also has a mild climate and is a good place to visit at any time of the year.</p>
         <p>Many people choose to stay in huts or campsites provided by the Department of 
             Conservation (DOC) as they explore the Coast Track. The track hugs the coast, offering spectacular views as you 
-            reach the top of a ridge, then it’s back down to a sheltered swimming and picnic spot.</p>    
+            reach the top of a ridge, then it’s back down to a sheltered swimming and picnic spot.</p>
             <h3 style="text-align:center">Contact Us</h3>
             <p style="text-align:center">Department of Conservation 
                 <br>Nelson Regional Visitor Centre
                 <br>79 Trafalgar St
-                <br>P O Box 375</p>    
+                <br>P O Box 375</p>
                 <a href="tel:03 546 9339" data-role="button">Phone:03 546 9339</a>
                 <!--Call number 03 546 9339-->
                 <a href="#home" data-role="button" data-rel="back" data-theme="b">Close</a>
-            </div>    
-        </div>  
+            </div>
+        </div> <!-- /options page -->
 
         <!--    Slidedown Page Options  Collapse    -->
         <div data-role="page" id="news" data-theme="b">
@@ -294,11 +281,11 @@
             <div class = "collapsible">
               <div data-role="collapsible-set" data-collapsed-icon="false" data-expanded-icon="false" data-theme="b" data-content-theme="a">
 
-                 <div data-role="collapsible" >
-                     <h2><p class= "title1">Thank you for your Reviews</p><p class= "title2">Posted by Wilson Team on 30 January 2014</p></h2>
-                     <p class="mini_title">Trip Advisor review</p>
-                     <img src="image/album-bb.jpg" align="left">
-                     <p class="txt">Thank you to all our Guests who have taken the time to review our facilities and services in Abel Tasman National Park.
+               <div data-role="collapsible" >
+                   <h2><p class= "title1">Thank you for your Reviews</p><p class= "title2">Posted by Wilson Team on 30 January 2014</p></h2>
+                   <p class="mini_title">Trip Advisor review</p>
+                   <img src="image/album-bb.jpg" align="left">
+                   <p class="txt">Thank you to all our Guests who have taken the time to review our facilities and services in Abel Tasman National Park.
                       We appreciate both positive and negative comments. Your feedback helps with our on-going commitment to provide the best possible 
                       experience for our Guests. We value your ideas for improvement and love to hear when we have got it right. As one of our Guides,
                       Pippy says, "So rewarding hearing people enjoy the trips as much as we enjoy giving them!  Thank you." </p>
@@ -337,6 +324,6 @@
                           <a href="#home" data-role="button" data-rel="back" data-theme="b" >Close</a>
                       </div>
                   </div>
-              </div>  
+              </div> <!-- /news page -->
           </body>
           </html>
