no real changes

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
 
 
 <body>
-   <!--    Jquery Modal Pop Up    -->
-   <div data-role =page id ="login">
+ <!--    Jquery Modal Pop Up    -->
+ <div data-role =page id ="login">
     <div id ='overlay'></div>
     <div id='modal'>
         <div id="content"> 
@@ -252,7 +252,7 @@
         </div>
         <a href="#home" data-role="button" data-rel="back" data-theme="b" >Close</a>
     </div>
-</div>
+</div> <!-- /weather page -->
 
 
 <!--    Slidedown Page Options  Call Us     -->
@@ -272,58 +272,57 @@
                 <!--Call number 03 546 9339-->
                 <a href="#home" data-role="button" data-rel="back" data-theme="b">Close</a>
             </div>
-        </div> <!-- /options page -->
+        </div> <!-- /contact page -->
 
         <!--    Slidedown Page Options  Collapse    -->
         <div data-role="page" id="news" data-theme="b">
             <h2 class="pageTitle"><span>Latest News and Events</span></h2>
 
             <div class = "collapsible">
-              <div data-role="collapsible-set" data-collapsed-icon="false" data-expanded-icon="false" data-theme="b" data-content-theme="a">
-
-               <div data-role="collapsible" >
-                   <h2><p class= "title1">Thank you for your Reviews</p><p class= "title2">Posted by Wilson Team on 30 January 2014</p></h2>
-                   <p class="mini_title">Trip Advisor review</p>
-                   <img src="image/album-bb.jpg" align="left">
-                   <p class="txt">Thank you to all our Guests who have taken the time to review our facilities and services in Abel Tasman National Park.
-                      We appreciate both positive and negative comments. Your feedback helps with our on-going commitment to provide the best possible 
-                      experience for our Guests. We value your ideas for improvement and love to hear when we have got it right. As one of our Guides,
-                      Pippy says, "So rewarding hearing people enjoy the trips as much as we enjoy giving them!  Thank you." </p>
-                  </div><!-- /collapsible -->
-
-                  <div data-role="collapsible" >
-                      <h2><p class= "title1">Low Season Timetable Now Operating</p><p class= "title2">Posted by Lucy Hodgson on 5 May 2013 </p></h2>
-                      <p class="mini_title">Low Season Cruise & Walk Options</p>
-                      <img src="image/album-bb.jpg" align="left">
-                      <p class="txt">Our Pitt Head Walk trip has the options of relaxing on the long, golden sands of Anchorage beach or taking a 45 minute walk to include picturesque Te Pukatea Bay or a 3 hour return walk to include Cleopatra’s Pool.Our Swing Bridge, Bush & Beach trip starts your walk at Medlands Beach, across the Falls River Swing Bridge, around the Torrent Bay inlet and along the golden sands of Anchorage Beach. 
-                          The Extended Cruise option is not available with the low season schedule.
-                      </p>
-                  </div><!-- /collapsible -->
-
-                  <div data-role="collapsible" >
-                      <h2><p class= "title1">West Coast Bridge Open</p><p class= "title2">Posted by Lucy Hodgson on 2 January 2013 </p></h2>
-                      <p class="mini_title">West Coast Bridge at HariHari</p>
-                      <img class="news_img" src="image/album-bb.jpg" align="left">
-                      <p class="txt">The West Coast Highway is now open for all traffic after the bridge washed out by heavy 
-                          rain was repaired ahead of schedule.  It is now possible to drive from Nelson and Motueka down the West
-                          Coast to Wanaka, Queenstown and Fiordland so you can include Punakaiki, Hokitika, Greymouth and all the
-                          West Coast attractions after you leave the Abel Tasman area.</p>
-                      </div><!-- /collapsible -->	
+                <div data-role="collapsible-set" data-collapsed-icon="false" data-expanded-icon="false" data-theme="b" data-content-theme="a">
+                    <div data-role="collapsible" >
+                        <h2><p class= "title1">Thank you for your Reviews</p><p class= "title2">Posted by Wilson Team on 30 January 2014</p></h2>
+                        <p class="mini_title">Trip Advisor review</p>
+                        <img src="image/album-bb.jpg" align="left">
+                        <p class="txt">Thank you to all our Guests who have taken the time to review our facilities and services in Abel Tasman National Park.
+                          We appreciate both positive and negative comments. Your feedback helps with our on-going commitment to provide the best possible 
+                          experience for our Guests. We value your ideas for improvement and love to hear when we have got it right. As one of our Guides,
+                          Pippy says, "So rewarding hearing people enjoy the trips as much as we enjoy giving them!  Thank you." </p>
+                      </div><!-- /collapsible -->
 
                       <div data-role="collapsible" >
-                          <h2><p class= "title1">We're Getting Our Road Back</p><p class= "title2">Posted by Awaroa Ratepayers on 21 February 2012</p></h2>
-                          <p class="mini_title"></p>
+                          <h2><p class= "title1">Low Season Timetable Now Operating</p><p class= "title2">Posted by Lucy Hodgson on 5 May 2013 </p></h2>
+                          <p class="mini_title">Low Season Cruise & Walk Options</p>
                           <img src="image/album-bb.jpg" align="left">
-                          <p class="txt">Awaroa Ratepayers are delighted to hear from Councillor Trevor Norriss,
-                              Chairman Engineering Services Committee, Tasman District Council, that funding is secured 
-                              for the repair of the Totaranui Road which includes the Awaroa Road.   Totaranui Rd is 100% 
-                              funded by the New Zealand Transport Agency and Awaroa Rd by the Council providing a subsidy for
-                              repairs and maintenance.   This work has or is due to start.  It will take some time and the road 
-                              will be closed while construction takes place.  At this time we have got no information as to how long this could take.</p>
-                          </div><!-- /collapsible -->
-                          <a href="#home" data-role="button" data-rel="back" data-theme="b" >Close</a>
+                          <p class="txt">Our Pitt Head Walk trip has the options of relaxing on the long, golden sands of Anchorage beach or taking a 45 minute walk to include picturesque Te Pukatea Bay or a 3 hour return walk to include Cleopatra’s Pool.Our Swing Bridge, Bush & Beach trip starts your walk at Medlands Beach, across the Falls River Swing Bridge, around the Torrent Bay inlet and along the golden sands of Anchorage Beach. 
+                              The Extended Cruise option is not available with the low season schedule.
+                          </p>
+                      </div><!-- /collapsible -->
+
+                      <div data-role="collapsible" >
+                          <h2><p class= "title1">West Coast Bridge Open</p><p class= "title2">Posted by Lucy Hodgson on 2 January 2013 </p></h2>
+                          <p class="mini_title">West Coast Bridge at HariHari</p>
+                          <img class="news_img" src="image/album-bb.jpg" align="left">
+                          <p class="txt">The West Coast Highway is now open for all traffic after the bridge washed out by heavy 
+                              rain was repaired ahead of schedule.  It is now possible to drive from Nelson and Motueka down the West
+                              Coast to Wanaka, Queenstown and Fiordland so you can include Punakaiki, Hokitika, Greymouth and all the
+                              West Coast attractions after you leave the Abel Tasman area.</p>
+                          </div><!-- /collapsible -->	
+
+                          <div data-role="collapsible" >
+                              <h2><p class= "title1">We're Getting Our Road Back</p><p class= "title2">Posted by Awaroa Ratepayers on 21 February 2012</p></h2>
+                              <p class="mini_title"></p>
+                              <img src="image/album-bb.jpg" align="left">
+                              <p class="txt">Awaroa Ratepayers are delighted to hear from Councillor Trevor Norriss,
+                                  Chairman Engineering Services Committee, Tasman District Council, that funding is secured 
+                                  for the repair of the Totaranui Road which includes the Awaroa Road.   Totaranui Rd is 100% 
+                                  funded by the New Zealand Transport Agency and Awaroa Rd by the Council providing a subsidy for
+                                  repairs and maintenance.   This work has or is due to start.  It will take some time and the road 
+                                  will be closed while construction takes place.  At this time we have got no information as to how long this could take.</p>
+                              </div><!-- /collapsible -->
+                              <a href="#home" data-role="button" data-rel="back" data-theme="b" >Close</a>
+                          </div>
                       </div>
-                  </div>
-              </div> <!-- /news page -->
-          </body>
-          </html>
+                  </div> <!-- /news page -->
+              </body>
+            </html>
