--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                     <!-- <div class = "fileUpload ui-btn ui-icon-camera ui-btn-icon-top">
                     <input type = "file" class = "upload" capture = "camera" accept="image/*" id="takePictureField"   data-role="none"></div>-->
 
-                    <li><a href = "#camera" class ="ui-btn ui-icon-camera ui-btn-icon-top">Submit Photo</a></li>
+                    <li><a href = "#camera" class ="ui-btn ui-icon-camera ui-btn-icon-top" onclick="getLocation()">Submit Photo</a></li>
                     <li><a href = "#popupmenu" data-rel="popup" data-transition="slideup" class= "ui-btn ui-corner-all  ui-icon-bars ui-btn-icon-top">Options</a>
                         <div data-role="popup" id="popupmenu" data-theme="b">
                             <ul data-role="listview" style="">
@@ -216,7 +216,7 @@
     <!--    Slidedown Page Submit Photo     -->
     <div data-role="page" id="camera" data-theme="a">
         <div data-role="content">
-            <form id="form1" enctype="multipart/form-data" method="post" class="validate">
+            <form id="form1" enctype="multipart/form-data" method="post">
                 <fieldset data-role="fieldcontain">
                     <!-- <label for=" IDText">User ID:</label> -->
                     <input name="IDText" id="IDText" type="text" placeholder="User ID"/>
@@ -244,13 +244,13 @@
                 <fieldset data-role="fieldcontain" class="ui-screen-hidden">
                     <input name="locationText" id="locationText" type="text"/>
                 </fieldset>
+                <div class = "test">
+                    <img id="yourimage"/>
+                </div>
                 <!-- <div data-role="controlgroup"> -->
                 <button type="submit" data-role="button" id="sendButton" data-icon="check" data-iconpos="right">Upload</button>
 
                 <!-- <button type="reset" data-icon="delete" data-iconpos="right" id="cancelButton">Cancel</button> -->
-                <div class = "test">
-                    <img id="yourimage"/>
-                </div>
                 <div id="progressNumber"></div>
             </form>
             <a href="#home" data-role="button" data-rel="back" data-theme="b">Close</a>
