--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                                 <li><a href="#slide" data-rel="dialog" data-transition="slidedown">Call</a></li>
                                 <li><a href="#news">Notice</a></li>
                                 <li><a href="http://encounter.snapithd.com/encounter2/index.php?w=t58f14127cbw40&f=0" height="100%" width="100%">Webcam</a></li>
-                                <li><a href="#gallery" onclick="galleryClick()">Gallery</a></li>
+                                <li><a href="#gallery" id = "galleryButton">Gallery</a></li>
                             </ul>
                         </div>
                     </li>
