--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@
                 <fieldset data-role="fieldcontain" class="ui-screen-hidden">
                     <input name="locationText" id="locationText" type="text"/>
                 </fieldset>
+                    <img id="hiddenImage" hidden/>
                 <div class = "test">
                     <img id="yourimage"/>
                 </div>
