testing form page

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                     <input type = "file" class = "upload" capture = "camera" accept="image/*" id="takePictureField"   data-role="none"></div>-->
 
                     <!-- <li><a href = "#camera" class ="ui-btn ui-icon-camera ui-btn-icon-top" onclick="getLocation()">Submit Photo</a></li> -->
-                    <li><a href = "form.html" data-rel="popup" id = "formLink" class ="ui-btn ui-icon-camera ui-btn-icon-top" onclick="getLocation()">Submit Photo</a></li>
+                    <li><a href = "/form" data-rel="popup" id = "formLink" class ="ui-btn ui-icon-camera ui-btn-icon-top" onclick="getLocation()">Submit Photo</a></li>
 
                     <li><a href = "#popupmenu" data-rel="popup" data-transition="slideup" class= "ui-btn ui-corner-all  ui-icon-bars ui-btn-icon-top">Options</a>
                         <div data-role="popup" id="popupmenu" data-theme="b">
