--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
                     <!-- <div class = "fileUpload ui-btn ui-icon-camera ui-btn-icon-top">
                     <input type = "file" class = "upload" capture = "camera" accept="image/*" id="takePictureField"   data-role="none"></div>-->
 
-                    <!-- <li><a href = "#camera" class ="ui-btn ui-icon-camera ui-btn-icon-top" onclick="getLocation()">Submit Photo</a></li> -->
-                    <li><a href = "/form" data-rel="popup" id = "formLink" class ="ui-btn ui-icon-camera ui-btn-icon-top" onclick="getLocation()">Submit Photo</a></li>
+                    <li><a href = "#camera" class ="ui-btn ui-icon-camera ui-btn-icon-top" onclick="getLocation()">Submit Photo</a></li>
+                    <!-- <li><a href = "form.html" data-rel="popup" id = "formLink" class ="ui-btn ui-icon-camera ui-btn-icon-top" onclick="getLocation()">Submit Photo</a></li> -->
 
                     <li><a href = "#popupmenu" data-rel="popup" data-transition="slideup" class= "ui-btn ui-corner-all  ui-icon-bars ui-btn-icon-top">Options</a>
                         <div data-role="popup" id="popupmenu" data-theme="b">
@@ -219,7 +219,7 @@
     <!--    Slidedown Page Submit Photo     -->
     <div data-role="page" id="camera" data-theme="a">
         <div data-role="content">
-            <form id="form1" enctype="multipart/form-data" method="post">
+            <form id="form1" enctype="multipart/form-data" method="post" action="">
                 <fieldset data-role="fieldcontain">
                     <!-- <label for=" IDText">User ID:</label> -->
                     <input name="IDText" id="IDText" type="text" placeholder="User ID"/>
