--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     <!--    Slidedown Page Submit Photo     -->
     <div data-role="page" id="camera" data-theme="a">
         <div data-role="content">
-            <form id="form1" enctype="multipart/form-data" method="post" data-ajax="false">
+            <form id="form1" enctype="multipart/form-data" method="post" >
                 <fieldset data-role="fieldcontain">
                     <!-- <label for=" IDText">User ID:</label> -->
                     <input name="IDText" id="IDText" type="text" placeholder="User ID"/>
