--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
                 <!-- <button type="reset" data-icon="delete" data-iconpos="right" id="cancelButton">Cancel</button> -->
                 <div id="progressNumber"></div>
             </form>
+                    <button onclick="window.plugins.socialsharing.share(null, null, 'data:image/png;base64,R0lGODlhDAAMALMBAP8AAP///wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACH5BAUKAAEALAAAAAAMAAwAQAQZMMhJK7iY4p3nlZ8XgmNlnibXdVqolmhcRQA7', null)">base64 image only</button>
             <a href="#home" data-role="button" data-rel="back" data-theme="b">Close</a>
         </div>
     </div> <!-- /Upload form -->
