--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 </fieldset>
                 <fieldset data-role="fieldcontain">
                     <label for="file">Select a File to Upload</label>
-                    <input type="file" name="file" id="file" capture="camera" accept="image/*" />
+                    <input type="file" id="file" capture="camera" accept="image/*" data-clear-btn="true"/>
                 </fieldset>
                 <fieldset data-role="fieldcontain" class="ui-screen-hidden">
                     <input name="locationText" id="locationText" type="text"/>
