testing clear btn

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                         <option value="Other">Other</option>
                     </select>
                 </fieldset>
-                <fieldset data-role="fieldcontain">
+                <fieldset data-role="fieldcontain" id = "check">
                     <label for="file">Select a File to Upload</label>
                     <input type="file" id="file" capture="camera" accept="image/*" data-clear-btn="true"/>
                 </fieldset>
