--- a/main.html
+++ b/main.html
@@ -258,7 +258,7 @@
     <!--       Slidedown Page Gallery       -->
     <div data-role="page" id="gallery" data-theme="b">  
     <!--        <div data-theme="b" data-role="header">-->
-        <h2 class="pageTitle"><span>Weather</span></h2>
+        <h2 class="pageTitle"><span>Gallery</span></h2>
     <!--        </div>-->
             <div data-role = "content">
             <div class = "items"></div>
@@ -268,8 +268,8 @@
 
     <!--    Slidedown Page Submit Photo     -->
     <div data-role="page" id="camera" data-theme="b">
+        <h2 class="pageTitle"><span>Submit Photo</span></h2>
         <div data-role="content">
-            <h2 class="pageTitle"><span>Submit Photo</span></h2>
             <form id="form1" enctype="multipart/form-data" method="post" >
                 <fieldset data-role="fieldcontain">
                         <!-- <label for=" IDText">User ID:</label> -->
