--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <meta charset="utf-8">
    <meta name = "apple-mobile-web-app-capable" content="yes"/>
 
-<title>AbleTasman Regsitery</title>
+<title>AbleTasman Registry</title>
 <!--<script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>-->
         
         <!-- Jquery and Jquery mobile -->
