--- a/main.html
+++ b/main.html
@@ -271,10 +271,12 @@
         <h2 class="pageTitle"><span>Submit Photo</span></h2>
         <div data-role="content">
             <form id="form1" enctype="multipart/form-data" method="post" >
+<!--
                 <fieldset data-role="fieldcontain">
-                        <!-- <label for=" IDText">User ID:</label> -->
+                         <label for=" IDText">User ID:</label> 
                         <input name="IDText" id="IDText" type="text" placeholder="User ID"/>
                     </fieldset>
+-->
                     <fieldset data-role="fieldcontain">
                         <!-- <label for=" TitleText">Title:</label> -->
                         <input name="TitleText" id="TitleText" type="text" placeholder="Title" data-clear-btn="true"/>
