--- a/main.html
+++ b/main.html
@@ -232,7 +232,9 @@
                         <li><a href = "#camera" class ="ui-btn ui-icon-camera ui-btn-icon-top" onclick="getLocation()">Photo</a></li>
                         <li><a href ="#news" class="ui-btn ui-icon-calendar ui-btn-icon-top"  data-transition="slidedown">Notice</a></li>
 
-                        <li><a href ="#gallery" class="ui-btn ui-icon-grid ui-btn-icon-top"  data-transition="slidedown">Gallery</a></li>
+                        <li><a href ="gallery.html" id = "galleryLink" class="ui-btn ui-icon-grid ui-btn-icon-top"  data-transition="slidedown">Gallery</a></li>
+ 
+
 
 
     <!--
@@ -256,15 +258,15 @@
             </div>
 
     <!--       Slidedown Page Gallery       -->
+<!--
     <div data-role="page" id="gallery" data-theme="b">  
-    <!--        <div data-theme="b" data-role="header">-->
         <h2 class="pageTitle"><span>Gallery</span></h2>
-    <!--        </div>-->
             <div data-role = "content">
             <div class = "items"></div>
                 <a href="#home" data-role="button" data-rel="back" data-theme="b">Back</a>
             </div>
     </div>
+-->
 
     <!--    Slidedown Page Submit Photo     -->
     <div data-role="page" id="camera" data-theme="b">
