--- a/gallery.html
+++ b/gallery.html
@@ -76,6 +76,9 @@
     <script src="testing/klass.min.js"></script>
     <link rel="stylesheet" href="testing/photoswipe.css" />
     <script src="testing/code.photoswipe.jquery-3.0.4.min.js"></script>
+    
+        <script src="gallery.js"></script>
+
 
     <!-- 
     END of our code -->
