--- a/gallery.html
+++ b/gallery.html
@@ -89,14 +89,14 @@
 <body>
     <!-- Home Page -->
     <!--    Slidedown Page Submit Photo     -->
-    <div data-role="page" id="gallery" data-theme="b">  
-    <!--        <div data-theme="b" data-role="header">-->
+    <div data-role="page" id="gallery" data-theme="b">
+        <div data-role = "main">
         <h2 class="pageTitle"><span>Gallery</span></h2>
-    <!--        </div>-->
             <div data-role = "content">
             <div class = "items"></div>
                 <a href="main.html#home" data-role="button" data-rel="back" data-theme="b">Back</a>
             </div>
+        </div>
     </div>
 </body>
 </html>
