--- a/main.html
+++ b/main.html
@@ -270,7 +270,7 @@
     <div data-role="page" id="camera" data-theme="b">
         <h2 class="pageTitle"><span>Submit Photo</span></h2>
         <div data-role="content">
-            <form id="form1" enctype="multipart/form-data" method="post" >
+            <form id="form1" enctype="multipart/form-data" method="post" data-ajax="false">
 <!--
                 <fieldset data-role="fieldcontain">
                          <label for=" IDText">User ID:</label> 
