no error page loading

--- a/main.html
+++ b/main.html
@@ -305,8 +305,8 @@
                         <img id="yourimage"/>
                     </div>
                     <!-- <div data-role="controlgroup"> -->
-                    <!-- <button type="submit" data-role="button" id="sendButton" data-icon="check" data-iconpos="right">Upload</button> -->
-                    <input type="submit" data-role="button" id="sendButton" data-icon="check" data-iconpos="right" value = "upload"/>
+                    <button type="submit" data-role="button" id="sendButton" data-icon="check" data-iconpos="right">Upload</button>
+                    <!-- <input type="submit" data-role="button" id="sendButton" data-icon="check" data-iconpos="right" value = "Upload"/> -->
 
                     <div id="progressNumber"></div>
                 </form>
